unpackaged/main/default/objects/Billing_Subscription__c/Billing_Subscription__c.object-meta.xml
<CustomObject>
    <label>Billing Subscription</label>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>