unpackaged/main/default/objects/Billing_Subscription__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Subscriptions</relationshipLabel>
    <relationshipName>Billing_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>