unpackaged/main/default/objects/Billing_Subscription__c/fields/Active_Charges__c.field-meta.xml
<CustomField>
    <fullName>Active_Charges__c</fullName>
    <label>Active Charges</label>
    <summaryFilterItems>
        <field>Billing_Subscription_Product_Charge__c.Zuora_Effective_End_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing_Subscription_Product_Charge__c.Pricing_Type__c</field>
        <operation>equals</operation>
        <value>Recurring</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing_Subscription_Product_Charge__c.Price__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing_Subscription_Product_Charge__c.Quantity__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing_Subscription_Product_Charge__c.Billing_Subscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>