unpackaged/main/default/objects/Billing_Subscription__c/fields/Amendment_Limit__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked from Workato if subscription is cancelled due to amendment limit being reached</description>
    <inlineHelpText>Checked from Workato if subscription is cancelled due to amendment limit being reached</inlineHelpText>
    <label>Amendment Limit</label>
    <type>Checkbox</type>
</CustomField>