unpackaged/main/default/objects/Billing_Subscription__c/fields/Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number__c</fullName>
    <formula>Billing_Account__r.Zuora_Billing_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account Number</label>
    <type>Text</type>
</CustomField>