unpackaged/main/default/objects/Billing_Subscription__c/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <description>Monthly or Annual</description>
    <inlineHelpText>Firm&#39;s billing cycle for the subscription</inlineHelpText>
    <label>Billing Cycle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>