unpackaged/main/default/objects/Billing_Subscription__c/fields/Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Billing_System__c</fullName>
    <label>Billing System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_System</valueSetName>
    </valueSet>
</CustomField>