unpackaged/main/default/objects/Billing_Subscription__c/fields/Billing_System_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_System_Subscription_ID__c</fullName>
    <label>Billing System Subscription ID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>