unpackaged/main/default/objects/Billing_Subscription__c/fields/Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Type__c</fullName>
    <description>Type of cancellation for the subscription to determine if the customer is cancelling or if the subscription is cancelled for the first purchase process or max number of amendments</description>
    <label>Cancellation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>New Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>