unpackaged/main/default/objects/Billing_Subscription__c/fields/Contracted_MRR__c.field-meta.xml
<CustomField>
    <fullName>Contracted_MRR__c</fullName>
    <description>Contracted MRR from the Subscription in the brand&#39;s billing system</description>
    <label>Contracted MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>