unpackaged/main/default/objects/Billing_Subscription__c/fields/First_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when subscription is paid for the first time in applicable billing system to trigger closed won automation in Salesforce</description>
    <label>First Time Charge</label>
    <type>Checkbox</type>
</CustomField>