unpackaged/main/default/objects/Billing_Subscription__c/fields/Historical_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Historical_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if subscription is created as cancelled during the migration</description>
    <label>Historical Cancellation</label>
    <type>Checkbox</type>
</CustomField>