unpackaged/main/default/objects/Billing_Subscription__c/fields/Last_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Date__c</fullName>
    <description>Date the subscription was last amended</description>
    <inlineHelpText>Date the subscription was last amended</inlineHelpText>
    <label>Last Booking Date</label>
    <type>Date</type>
</CustomField>