unpackaged/main/default/objects/Billing_Subscription__c/fields/MC_First_Purchase_Cancel__c.field-meta.xml
<CustomField>
    <fullName>MC_First_Purchase_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked through automation from Workato when subscription is cancelled during first purchase process. Used to filter out for reporting and not trigger downstream automation.</description>
    <label>MC First Purchase Cancel</label>
    <type>Checkbox</type>
</CustomField>