unpackaged/main/default/objects/Billing_Subscription__c/fields/Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Date__c</fullName>
    <description>Date subscription is set to be billed next</description>
    <inlineHelpText>Date subscription is set to be billed next</inlineHelpText>
    <label>Next Billing Date</label>
    <type>Date</type>
</CustomField>