unpackaged/main/default/objects/Billing_Subscription__c/fields/Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Product_Tier__c</fullName>
    <description>Main product tier the firm subscribed to in the applicable billing system</description>
    <inlineHelpText>Main product tier the firm subscribed to in the applicable billing system</inlineHelpText>
    <label>Product Tier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>