unpackaged/main/default/objects/Billing_Subscription__c/fields/Sales_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked through a flow when sales converts a lead and the firm has already converted to trigger the opportunity stage updates flow</description>
    <label>Sales Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>