unpackaged/main/default/objects/Billing_Subscription__c/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <description>End date of subscription from applicable billing system</description>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>