unpackaged/main/default/objects/Billing_Subscription__c/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <inlineHelpText>Original Start Date of the Subscription</inlineHelpText>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>