unpackaged/main/default/objects/Billing_Subscription__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <description>Type of subscription created defined by business metrics</description>
    <inlineHelpText>Type of subscription created defined by business metrics</inlineHelpText>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>