unpackaged/main/default/objects/Billing_Subscription__c/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <inlineHelpText>End date of current term</inlineHelpText>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>