unpackaged/main/default/objects/Billing_Subscription__c/fields/Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Start_Date__c</fullName>
    <inlineHelpText>Start date for current term</inlineHelpText>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>